Fix BG image width on mobile

--- a/src/less/themes.less
+++ b/src/less/themes.less
@@ -140,6 +140,7 @@
 		    background-image: url('/images/themes/victoria/curly-brace-top.png');
 		    background-repeat: no-repeat;
 		    background-position: 50%;
+			background-size: contain;
 	    }
 	}
 	p.wedding-date:after {
@@ -150,6 +151,7 @@
     	background-image: url('/images/themes/victoria/curly-brace-bottom.png');
     	background-repeat: no-repeat;
     	background-position: 50%;
+		background-size: contain;
 	}
 	.home-container {
 		padding-top: 150px;
